<resources>
    <string name="app_name">T3H最终项目</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password??</string>
    <string name="i_don_t_have_an_account">I don\'t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="nick_name">Nick Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="chat">Chat</string>
    <string name="search">Search</string>
    <string name="message">Message</string>
    <string name="contact">Contact</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>